k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grocery-shopping-app-service
  namespace: grocery-shopping-app
spec:
  selector:
    app: grocery-shopping-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
