k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocery-shopping-app-ingress
  namespace: grocery-shopping-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: grocery.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocery-shopping-app-service
                port:
                  number: 80
